@@ -15,14 +15,14 @@
     {
       "name": "Franz Holzinger",
       "role": "Developer",
-      "homepage": "http://ttproducts.de"
+      "homepage": "https://ttproducts.de"
     }
   ],
   "license": [
     "GPL-2.0-or-later"
   ],
   "require": {
-    "typo3/cms-core": ">=7.6.0,<9.5.99"
+    "typo3/cms-core": ">=8.7.0,<=9.5.99"
   },
   "autoload": {
     "psr-4": {
